# improved-documentation

./: .gitignore  docker-compose.override.yml  docker-compose.yml  justfile
apps/leptos-cv/: Cargo.toml  Dockerfile  index.html  sample-z.txt  style.css
apps/leptos-cv/src/: app.rs  db.rs  lib.rs  main.rs  terminal.rs
apps/phoenix-dashboard/: .gitignore  Dockerfile  README.md  mix.exs
apps/phoenix-dashboard/assets/css/: app.css
apps/phoenix-dashboard/assets/js/: app.js
apps/phoenix-dashboard/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
apps/phoenix-dashboard/lib/: phoenix_dashboard.ex  phoenix_dashboard_web.ex
apps/phoenix-dashboard/lib/phoenix_dashboard/: application.ex  auth.ex  embedding_pipeline.ex  ollama_client.ex  surreal_client.ex  web_search.ex
apps/phoenix-dashboard/lib/phoenix_dashboard_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
apps/phoenix-dashboard/lib/phoenix_dashboard_web/components/: core_components.ex  layouts.ex
apps/phoenix-dashboard/lib/phoenix_dashboard_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex  session_controller.ex  session_html.ex
apps/phoenix-dashboard/lib/phoenix_dashboard_web/live/: analytics_live.ex  blog_live.ex  blog_post_live.ex  certifications_live.ex  dashboard_live.ex  experience_live.ex  projects_live.ex  skill_analytics_live.ex  skills_live.ex
apps/phoenix-dashboard/lib/phoenix_dashboard_web/plugs/: require_auth.ex
apps/phoenix-dashboard/test/support/: conn_case.ex
apps/searxng/: settings.yml
apps/surrealdb/: Dockerfile
apps/surrealdb/schemas/: 001_cv_tables.surql  002_cv_relations.surql  003_cv_permissions.surql  004_cv_indexes.surql  005_cv_events.surql  006_blog.surql  007_embeddings.surql
apps/surrealdb/scripts/: healthcheck.sh  init.sh
apps/surrealdb/seed/: cv_data.surql
docs/: README.md  ai-recommendations.md  architecture.md  deployment.md  services.md  vision.md
k8s/base/: kustomization.yaml  namespace.yaml
k8s/base/cloudflared/: configmap.yaml  deployment.yaml  kustomization.yaml
k8s/base/ingress/: ingress.yaml  kustomization.yaml  rate-limit.yaml
k8s/base/leptos-cv/: deployment.yaml  service.yaml
k8s/base/ollama/: deployment.yaml  init-job.yaml  kustomization.yaml  service.yaml
k8s/base/phoenix-dashboard/: deployment.yaml  service.yaml
k8s/base/searxng/: configmap.yaml  deployment.yaml  service.yaml
k8s/base/surrealdb/: init-job.yaml  kustomization.yaml  networkpolicy.yaml  secret.yaml  service.yaml  statefulset.yaml
k8s/base/traefik/: deployment.yaml  kustomization.yaml  rbac.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/dev/patches/: leptos-cv-patch.yaml  ollama-patch.yaml  phoenix-patch.yaml  searxng-patch.yaml  surrealdb-patch.yaml
k8s/overlays/live-local/: kustomization.yaml
k8s/overlays/live-local/patches/: image-pull-never.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/prod/patches/: cloudflared-config.yaml  ingress-hosts.yaml  ingress-public.yaml
scripts/: dev-down.sh  dev-ports.sh  dev-up.sh  minikube-deploy.sh  minikube-teardown.sh
(+7 files in other folders)
